@@ -98,11 +98,12 @@
 
 #if defined(LIBC_SCCS) && !defined(lint)
 /*static char *sccsid = "from: @(#)sigcompat.c	5.3 (Berkeley) 2/24/91";*/
-static char *rcsid = "$Id: sigcompat.c,v 1.16 2002/11/26 07:53:06 sjg Exp $";
+static char *rcsid = "$Id: sigcompat.c,v 1.17 2005/10/09 22:32:48 sjg Exp $";
 #endif				/* LIBC_SCCS and not lint */
 
 #undef signal
 #include <stdio.h>
+#include <string.h>
 #include <sys/param.h>
 #include <sys/cdefs.h>
 #include "assert.h"
